--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
+        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="ball.js"></script>
     </head>
     <body>
